fix: overflow nos cards participativos

--- a/app/packs/stylesheets/decidim/homes/_participatory_cards.scss
+++ b/app/packs/stylesheets/decidim/homes/_participatory_cards.scss
@@ -26,8 +26,8 @@
 
 .cards_icon-container {
   display: flex;
-  width: 61px;
-  height: 60px;
+  min-width: 60px;
+  min-height: 60px;
   justify-content: center;
   align-items: center;
   gap: 0.75rem;
@@ -53,12 +53,16 @@
 .cards_info-content {
   display: flex;
   align-items: center;
+  max-height: 60px;
+  max-width: 275px;
   gap: 0.75rem;
 }
 
 .cards_info-text {
   display: flex;
   flex-direction: column;
+  white-space: nowrap;
+  overflow: hidden;
   gap: 0.5rem;
 }
 
@@ -66,6 +70,8 @@
   color: var(--pure-0);
   font-size: 1.5rem;
   font-weight: var(--font-weight-medium);
+  overflow: hidden;
+  text-overflow: ellipsis;
   padding: 0;
   margin: 0;
 }
